[gd_scene load_steps=12 format=3 uid="uid://cvhl0h2ssgyvt"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_k5ac4"]
[ext_resource type="Texture2D" uid="uid://cq17gmqbewcvn" path="res://Assets/GravityBackground.jpg" id="2_ot7r5"]
[ext_resource type="PackedScene" uid="uid://011dx0h3kps0" path="res://Objects/Asteroids/Asteroid_1.tscn" id="3_00my4"]
[ext_resource type="PackedScene" uid="uid://bj0anesk420fh" path="res://Objects/BlackHole.tscn" id="3_21bof"]
[ext_resource type="PackedScene" uid="uid://b4x5ct8uww1o3" path="res://Objects/Asteroids/Asteroid_2.tscn" id="4_32ptk"]
[ext_resource type="PackedScene" uid="uid://cpf4gdi3xoben" path="res://Objects/WhiteHole.tscn" id="4_gayxn"]
[ext_resource type="PackedScene" uid="uid://b5x5gbb6cobld" path="res://Player/Player.tscn" id="5_rm0v6"]
[ext_resource type="PackedScene" uid="uid://cwqgbptrenebh" path="res://Objects/Finish.tscn" id="6_c5gv0"]
[ext_resource type="Texture2D" uid="uid://cxm4b2reyftk8" path="res://Assets/CompletedBox.png" id="7_g8efr"]
[ext_resource type="Texture2D" uid="uid://llvf1wotmnqn" path="res://Assets/BlackHole2.png" id="10_afqd5"]
[ext_resource type="PackedScene" uid="uid://be0erdvxnlby3" path="res://Objects/Border.tscn" id="11_kkank"]

[node name="Level_25" type="Node2D"]
script = ExtResource("1_k5ac4")

[node name="GravityBackground" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.67, 0.67)
texture = ExtResource("2_ot7r5")

[node name="Label" type="Label" parent="GravityBackground"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1060.0
offset_top = -500.0
offset_right = -860.0
offset_bottom = -400.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "LEVEL 25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WormHoles" type="Node2D" parent="."]

[node name="BlackHoles" type="Node2D" parent="."]

[node name="BlackHole" parent="BlackHoles" instance=ExtResource("3_21bof")]
position = Vector2(1173, 412)

[node name="WhiteHoles" type="Node2D" parent="."]

[node name="WhiteHole1" parent="WhiteHoles" instance=ExtResource("4_gayxn")]
position = Vector2(649, 299)

[node name="Asteroids" type="Node2D" parent="."]

[node name="Asteroid_1" parent="Asteroids" instance=ExtResource("3_00my4")]
position = Vector2(646, 143)
rotation = 1.5708

[node name="Asteroid_2" parent="Asteroids" instance=ExtResource("4_32ptk")]
position = Vector2(649, 219)
rotation = 1.5708

[node name="Asteroid_3" parent="Asteroids" instance=ExtResource("3_00my4")]
position = Vector2(1184, 520)
rotation = 1.5708

[node name="Asteroid_4" parent="Asteroids" instance=ExtResource("4_32ptk")]
position = Vector2(1187, 596)
rotation = 1.5708

[node name="Player" type="Node2D" parent="."]

[node name="Player" parent="Player" instance=ExtResource("5_rm0v6")]
position = Vector2(217, 394)

[node name="Finish" parent="." instance=ExtResource("6_c5gv0")]
position = Vector2(908, 199)

[node name="Instructions" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 145.0
offset_top = 615.0
offset_right = 945.0
offset_bottom = 715.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "CLICK TO TOGGLE GRAVITY! -->"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="."]
offset_left = 40.0
offset_top = 30.0
offset_right = 190.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 40
text = "MENU"

[node name="ResetButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1100.0
offset_top = 30.0
offset_right = 1250.0
offset_bottom = 105.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "RESET"

[node name="FlipGravityButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 900.0
offset_top = 625.0
offset_right = 1250.0
offset_bottom = 700.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "INVERT GRAVITY"

[node name="NextLevelButton" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 515.0
offset_top = 600.0
offset_right = 765.0
offset_bottom = 675.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "NEXT LEVEL"

[node name="CompletedGroup" type="CanvasGroup" parent="."]
visible = false

[node name="CompletedBox" type="Sprite2D" parent="CompletedGroup"]
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(640, 360)
scale = Vector2(0.6, 0.4)
texture = ExtResource("7_g8efr")

[node name="Time" type="Label" parent="CompletedGroup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 385.0
offset_top = 220.0
offset_right = 585.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "TIME:"
vertical_alignment = 1

[node name="Speed" type="Label" parent="CompletedGroup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 385.0
offset_top = 375.0
offset_right = 585.0
offset_bottom = 475.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "SPEED:"
vertical_alignment = 1

[node name="TimeValue" type="Label" parent="CompletedGroup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 500.0
offset_top = 220.0
offset_right = 900.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 2
vertical_alignment = 1

[node name="SpeedValue" type="Label" parent="CompletedGroup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 500.0
offset_top = 375.0
offset_right = 900.0
offset_bottom = 475.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 2
vertical_alignment = 1

[node name="SpawnableBlackHoles" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="SpawnableBlackHoles"]

[node name="Sprite2D" type="Sprite2D" parent="SpawnableBlackHoles"]
position = Vector2(65, 652)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_afqd5")

[node name="SpawnableBHBox" type="Sprite2D" parent="SpawnableBlackHoles"]
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(104, 650)
scale = Vector2(0.196, 0.131)
texture = ExtResource("7_g8efr")

[node name="SpawnBHCount" type="Label" parent="SpawnableBlackHoles"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 599.0
offset_right = 183.0
offset_bottom = 699.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = ": 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Borders" type="Node2D" parent="."]

[node name="Border" parent="Borders" instance=ExtResource("11_kkank")]
position = Vector2(640, -170)

[node name="Border2" parent="Borders" instance=ExtResource("11_kkank")]
position = Vector2(1510, 360)
rotation = 1.5708

[node name="Border3" parent="Borders" instance=ExtResource("11_kkank")]
position = Vector2(640, 880)

[node name="Border4" parent="Borders" instance=ExtResource("11_kkank")]
position = Vector2(-200, 360)
rotation = 1.5708

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="FlipGravityButton" to="." method="_on_flip_gravity_button_pressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
